--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -2,30 +2,32 @@
 version: '2'
 services:
   redis-node-0:
-    image: docker.io/bitnami/redis-cluster:latest
+    image: docker.io/bitnami/redis-cluster:7.0
+    ports:
+      - "6379:6379"
     volumes:
       - redis-cluster_data-0:/bitnami/redis/data
     environment:
-      - 'REDIS_PASSWORD=bitnami'
+      - 'ALLOW_EMPTY_PASSWORD=yes'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
 
   redis-node-1:
-    image: docker.io/bitnami/redis-cluster:latest
+    image: docker.io/bitnami/redis-cluster:7.0
     volumes:
       - redis-cluster_data-1:/bitnami/redis/data
     environment:
-      - 'REDIS_PASSWORD=bitnami'
+      - 'ALLOW_EMPTY_PASSWORD=yes'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
 
   redis-node-2:
-    image: docker.io/bitnami/redis-cluster:latest
+    image: docker.io/bitnami/redis-cluster:7.0
     volumes:
       - redis-cluster_data-2:/bitnami/redis/data
     depends_on:
       - redis-node-0
       - redis-node-1
     environment:
-      - 'REDIS_PASSWORD=bitnami'
+      - 'ALLOW_EMPTY_PASSWORD=yes'
       - 'REDISCLI_AUTH=bitnami'
       - 'REDIS_CLUSTER_REPLICAS=1'
       - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
