--- a/Redis/docker-compose.yml
+++ b/Redis/docker-compose.yml
@@ -1,36 +1,63 @@
-#https://github.com/bitnami/bitnami-docker-redis-cluster/blob/master/docker-compose.yml
+# This docker-compose file heavily inspired from https://github.com/bitnami/bitnami-docker-redis-cluster/blob/master/docker-compose.yml
+# and LOG8430E Slack examples.
 version: '2'
 services:
   redis-node-0:
     image: docker.io/bitnami/redis-cluster:7.0
-    ports:
-      - "6379:6379"
     volumes:
       - redis-cluster_data-0:/bitnami/redis/data
+    ports:
+      - '6379:6379'
     environment:
-      - 'ALLOW_EMPTY_PASSWORD=yes'
-      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
+      - ALLOW_EMPTY_PASSWORD=yes
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
 
   redis-node-1:
     image: docker.io/bitnami/redis-cluster:7.0
     volumes:
       - redis-cluster_data-1:/bitnami/redis/data
     environment:
-      - 'ALLOW_EMPTY_PASSWORD=yes'
-      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
+      - ALLOW_EMPTY_PASSWORD=yes
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
 
   redis-node-2:
     image: docker.io/bitnami/redis-cluster:7.0
     volumes:
       - redis-cluster_data-2:/bitnami/redis/data
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
+
+  redis-node-3:
+    image: docker.io/bitnami/redis-cluster:7.0
+    volumes:
+      - redis-cluster_data-3:/bitnami/redis/data
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
+
+  redis-node-4:
+    image: docker.io/bitnami/redis-cluster:7.0
+    volumes:
+      - redis-cluster_data-4:/bitnami/redis/data
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
+
+  redis-node-5:
+    image: docker.io/bitnami/redis-cluster:7.0
+    volumes:
+      - redis-cluster_data-5:/bitnami/redis/data
     depends_on:
       - redis-node-0
       - redis-node-1
+      - redis-node-2
+      - redis-node-3
+      - redis-node-4
     environment:
-      - 'ALLOW_EMPTY_PASSWORD=yes'
-      - 'REDISCLI_AUTH=bitnami'
+      - ALLOW_EMPTY_PASSWORD=yes
       - 'REDIS_CLUSTER_REPLICAS=1'
-      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2'
+      - 'REDIS_NODES=redis-node-0 redis-node-1 redis-node-2 redis-node-3 redis-node-4 redis-node-5'
       - 'REDIS_CLUSTER_CREATOR=yes'
 
 volumes:
@@ -39,4 +66,10 @@ volumes:
   redis-cluster_data-1:
     driver: local
   redis-cluster_data-2:
+    driver: local
+  redis-cluster_data-3:
+    driver: local
+  redis-cluster_data-4:
+    driver: local
+  redis-cluster_data-5:
     driver: local
